transition from basic html to react

--- a/index.html
+++ b/index.html
@@ -1,66 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Niranjan0</title>
-    <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="assets/favicon/site.webmanifest">
-
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            background-color: black;
-        }
-
-        .bimg {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            position: fixed;
-            top: 0;
-            left: 0;
-            opacity: 0.3;
-        }
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 80vh;
-            flex-direction: column;
-        }
-        .text {
-            font-family: "Madimi One", sans-serif;
-            color: white;
-            text-align: center;
-            margin: 40px;
-            z-index: 1;
-        }
-        .br{
-            color: rgba(255, 255, 255, 0.534);
-        }
-        .name {
-            font-weight: 800;
-            margin-bottom: 100px;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="container">
-        <h6 class="text name">Niranjan0</h6>
-        <h5 class="text br">The developer is probably binge-watching something instead of coding 😴</h4>
-    </div>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Niranjan Dangi</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
